# shaurya

./: .gitignore  README.md  Shaurya_Metrics.txt  bridge.py  build.bat  cmakelists.txt  convert_model.py  dashboard.py  dashboard_snapshot_20260324_190832.txt  falcon-node.pem  feature_engine.v  full-code  gateway.py  kill_switch.v  mockexchange.cpp  pyproject.toml  rate_limiter.v  real_stock_injector.py  requirements.txt  risk_firewall.v  shaurya_brain.h5  shaurya_brain.json  test.py  train_model.py
include/: ShauryaEngine.h  fixparser.h  inference.h  lockfreequeue.h  logger.h  networkclient.h  stats.h  verilated.h
obj_dir/: Vfeature_engine.cpp  Vfeature_engine.h  Vfeature_engine.mk  Vfeature_engine__Syms.cpp  Vfeature_engine__Syms.h  Vfeature_engine___024root.h  Vfeature_engine___024root__DepSet_h1e24fe44__0.cpp  Vfeature_engine___024root__DepSet_h1e24fe44__0__Slow.cpp  Vfeature_engine___024root__DepSet_h22b283e2__0.cpp  Vfeature_engine___024root__Slow.cpp  Vfeature_engine__pch.h  Vfeature_engine__ver.d  Vfeature_engine_classes.mk  Vkill_switch.cpp  Vkill_switch.h  Vkill_switch.mk  Vkill_switch__Syms.cpp  Vkill_switch__Syms.h  Vkill_switch___024root.h  Vkill_switch___024root__DepSet_ha9db86be__0.cpp  Vkill_switch___024root__DepSet_hd76ca309__0.cpp  Vkill_switch___024root__DepSet_hd76ca309__0__Slow.cpp  Vkill_switch___024root__Slow.cpp  Vkill_switch__pch.h  Vkill_switch__ver.d  Vkill_switch_classes.mk  Vrate_limiter.cpp  Vrate_limiter.h  Vrate_limiter.mk  Vrate_limiter__Syms.cpp  Vrate_limiter__Syms.h  Vrate_limiter___024root.h  Vrate_limiter___024root__Slow.cpp  (+19 more)
(+8 files in other folders)
